--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "gray-matter": "^4.0.3",
     "helmet": "^7.1.0",
     "marked": "^9.1.5",
-    "mongoose": "^8.8.0",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
