--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.5",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^6.0.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.9",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
