--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "passport-local": "^1.0.0",
     "recachegoose": "^11.0.3",
     "resend": "^6.5.2",
-    "tanzanian-phone-validator": "^1.1.5"
+    "tanzanian-phone-validator": "github:TZ255/tanzanian-phone-validator"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
